--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "turbo run test"
   },
   "devDependencies": {
-    "turbo": "^1.10.0",
-    "@changesets/cli": "^2.26.0"
+    "@changesets/cli": "^2.26.0",
+    "turbo": "^1.10.0"
   },
-  "packageManager": "pnpm@8.6.0"
+  "packageManager": "pnpm@10.13.1"
 }
