--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "turbo": "^2.5.5"
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
+    "turbo": "^2.5.5",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.13.1"
 }
