--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,15 +17,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "composite": true
+    "isolatedModules": true
   },
-  "references": [
-    { "path": "./packages/reporter" },
-    { "path": "./packages/web" },
-    { "path": "./packages/api" },
-    { "path": "./packages/shared" }
-  ],
-  "files": [],
+  "include": ["packages/**/*"],
   "exclude": ["node_modules", "dist"]
 }
