--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,13 +15,14 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.0",
     "@prisma/client": "^6.3.0",
     "fastify": "^5.2.0",
-    "@fastify/cors": "^10.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
+    "@fastify/type-provider-typebox": "^5.2.0",
+    "@types/node": "^22.16.5",
     "prisma": "^6.3.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
