--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",
     "moduleResolution": "node",
     "module": "ESNext",
-    "target": "ES2022"
+    "target": "ES2022",
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
