--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
-    "@simple-pw/reporter": "workspace:*"
+    "@simple-pw/reporter": "workspace:*",
+    "@types/node": "^24.1.0"
   }
 }
