docs: add initial doc

--- a/turbo.json
+++ b/turbo.json
@@ -10,9 +10,7 @@
       "cache": false,
       "persistent": true
     },
-    "lint": {
-      "dependsOn": []
-    },
+    "lint": {},
     "test": {
       "dependsOn": ["build"]
     }
