--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.85.3",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
